<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.teameetmeet.meetmeet.presentation.calendar.monthcalendar.vm.MonthCalendarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/calendar_ib_nav_pre_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:onClick="@{() -> vm.moveMonth(-1l)}"
            android:src="@drawable/ic_nav_pre"
            app:layout_constraintBottom_toBottomOf="@id/calendar_tv_date"
            app:layout_constraintEnd_toStartOf="@id/calendar_tv_date"
            app:layout_constraintTop_toTopOf="@id/calendar_tv_date" />

        <TextView
            android:id="@+id/calendar_tv_date"
            style="@style/medium.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:local_date="@{vm.currentDate.date}"
            tools:text="2023년 11월" />

        <ImageButton
            android:id="@+id/calendar_ib_nav_next_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:onClick="@{() -> vm.moveMonth(1l)}"
            android:src="@drawable/ic_nav_next"
            app:layout_constraintBottom_toBottomOf="@id/calendar_tv_date"
            app:layout_constraintStart_toEndOf="@id/calendar_tv_date"
            app:layout_constraintTop_toTopOf="@id/calendar_tv_date" />


        <TextView
            android:id="@+id/calendar_tv_day_monday"
            style="@style/caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calendar_day_of_week_monday"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/calendar_tv_day_tuesday"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/calendar_cv"
            app:layout_constraintTop_toBottomOf="@id/calendar_tv_date" />

        <TextView
            android:id="@+id/calendar_tv_day_tuesday"
            style="@style/caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_day_of_week_tuesday"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/calendar_tv_day_monday"
            app:layout_constraintEnd_toStartOf="@id/calendar_tv_day_wednesday"
            app:layout_constraintStart_toEndOf="@id/calendar_tv_day_monday"
            app:layout_constraintTop_toTopOf="@id/calendar_tv_day_monday" />

        <TextView
            android:id="@+id/calendar_tv_day_wednesday"
            style="@style/caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_day_of_week_wednesday"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/calendar_tv_day_monday"
            app:layout_constraintEnd_toStartOf="@id/calendar_tv_day_thursday"
            app:layout_constraintStart_toEndOf="@id/calendar_tv_day_tuesday"
            app:layout_constraintTop_toTopOf="@id/calendar_tv_day_monday" />

        <TextView
            android:id="@+id/calendar_tv_day_thursday"
            style="@style/caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_day_of_week_thursday"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/calendar_tv_day_monday"
            app:layout_constraintEnd_toStartOf="@id/calendar_tv_day_friday"
            app:layout_constraintStart_toEndOf="@id/calendar_tv_day_wednesday"
            app:layout_constraintTop_toTopOf="@id/calendar_tv_day_monday" />

        <TextView
            android:id="@+id/calendar_tv_day_friday"
            style="@style/caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_day_of_week_friday"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/calendar_tv_day_monday"
            app:layout_constraintEnd_toStartOf="@id/calendar_tv_day_saturday"
            app:layout_constraintStart_toEndOf="@id/calendar_tv_day_thursday"
            app:layout_constraintTop_toTopOf="@id/calendar_tv_day_monday" />

        <TextView
            android:id="@+id/calendar_tv_day_saturday"
            style="@style/caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_day_of_week_saturday"
            android:textAlignment="center"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@id/calendar_tv_day_monday"
            app:layout_constraintEnd_toStartOf="@id/calendar_tv_day_sunday"
            app:layout_constraintStart_toEndOf="@id/calendar_tv_day_friday"
            app:layout_constraintTop_toTopOf="@id/calendar_tv_day_monday" />

        <TextView
            android:id="@+id/calendar_tv_day_sunday"
            style="@style/caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_day_of_week_sunday"
            android:textAlignment="center"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="@id/calendar_tv_day_monday"
            app:layout_constraintEnd_toEndOf="@id/calendar_cv"
            app:layout_constraintStart_toEndOf="@id/calendar_tv_day_saturday"
            app:layout_constraintTop_toTopOf="@id/calendar_tv_day_monday" />

        <com.teameetmeet.meetmeet.presentation.calendar.monthcalendar.MonthCalendarView
            android:id="@+id/calendar_cv"
            days_in_month="@{vm.daysInMonth}"
            monthly_events="@{vm.monthlyEvents}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendar_tv_day_monday" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_event_title"
            android:visibility="@{vm.addButtonVisible?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_plus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>