<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.teameetmeet.meetmeet.presentation.login.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_app_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_nav_pre"
                app:title="@string/login_app_sign_up" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_tf_email"
            duplicate_check="@{vm.uiState.emailDuplicateCheck}"
            sign_up_email_state="@{vm.uiState.emailState}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/login_app_email"
            app:helperTextTextColor="@color/green"
            app:layout_constraintBottom_toTopOf="@id/sign_up_tf_password"
            app:layout_constraintEnd_toStartOf="@id/sign_up_btn_email_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_app_bar"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_et_email"
                style="@style/medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="64"
                android:onTextChanged="@{(p0, p1, p2, p3) -> vm.setEmail(p0)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_btn_email_check"
            style="@style/Widget.Material3.Button.TonalButton"
            email_duplicate_enabled="@{vm.uiState.emailState}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> vm.checkDuplicate()}"
            android:text="@string/login_app_duplicate_check"
            app:layout_constraintBottom_toBottomOf="@id/sign_up_tf_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sign_up_tf_email"
            app:layout_constraintTop_toTopOf="@id/sign_up_tf_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_tf_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="40dp"
            android:hint="@string/login_app_password"
            app:layout_constraintBottom_toTopOf="@id/sign_up_tf_password_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_tf_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_et_password"
                style="@style/medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="14"
                android:onTextChanged="@{(p0, p1, p2, p3) -> vm.setPassword(p0)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_tf_password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/login_app_password_confirm"
            app:layout_constraintBottom_toTopOf="@id/sign_up_btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_tf_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_et_password_confirm"
                style="@style/medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="14"
                android:onTextChanged="@{(p0, p1, p2, p3) -> vm.setPasswordConfirm(p0)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:onClick="@{() -> vm.signUp()}"
            android:text="@string/login_app_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_tf_password_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>